--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="card" aria-label="Profile card">
       <header class="header" role="banner">
         <!-- Profile photo -->
-        <img class="avatar" src="assets/profile.jpg" alt="Profile photo of Adrian Darmali" />
+        <img class="avatar" src="https://raw.githubusercontent.com/adriandarmali/adriandarmali.github.io/main/Photo%20Profile.jpg" alt="Profile photo of Adrian Darmali" />
         <div class="title">
           <h1>Adrian Darmali</h1>
           <p class="subtitle">Strategy × Analytics • MBAN @ UBC Sauder</p>
