--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
           <h2>Projects</h2>
           <ul class="links">
             <li><a href="https://github.com/adriandarmali/rag" target="_blank" rel="noopener noreferrer">RAG experiments</a></li>
+            <li><a href="https://github.com/adriandarmali/housing-project" target="_blank" rel="noopener noreferrer">Housing Listings Assortment Optimizer</a></li>
             <li><a href="https://github.com/adriandarmali?tab=repositories" target="_blank" rel="noopener noreferrer">More repositories</a></li>
           </ul>
         </section>
