--- a/index.html
+++ b/index.html
@@ -199,6 +199,18 @@
       </main>
     </div>
 
+      <section id="hobbies">
+        <h2>Hobbies</h2>
+          <p>
+            Outside of work, I’m usually either on a golf course or training. I like golf because it’s a mix of
+            patience, focus, and small improvements over time. I’m also into hybrid fitness—strength work plus
+            conditioning—because it keeps things balanced and fun. When I’m not doing that, I’m watching
+            football or Formula 1, and I unwind by reading history. I like history that explains how decisions,
+            incentives, and turning points shaped what happened next.
+          </p>
+      </section>
+
+
     <footer>
       <div>© <span id="year"></span> Adrian Darmali</div>
     </footer>
