--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Adrian Darmali</title>
-  <meta name="description" content="Adrian Darmali — Strategy x Analytics, MBAN @ UBC Sauder" />
+  <meta name="description" content="Adrian Darmali — Strategy x Analytics, Master of Business Analytics @ UBC Sauder" />
   <!-- Inter: modern professional font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -139,7 +139,7 @@
         <img class="avatar" src="https://raw.githubusercontent.com/adriandarmali/adriandarmali.github.io/main/Photo%20Profile.jpg" alt="Profile photo of Adrian Darmali" />
         <div class="title">
           <h1>Adrian Darmali</h1>
-          <p class="subtitle">Strategy × Analytics • MBAN @ UBC Sauder</p>
+          <p class="subtitle">Strategy × Analytics • Master of Business Analytics @ UBC Sauder</p>
 
           <div class="chips" aria-label="Skill highlights">
             <span class="chip">Python</span>
@@ -163,9 +163,9 @@
           </p>
           <p>
             Now, as an MBAN student at UBC Sauder, I build practical analytics tools end-to-end:
-            data pipelines, scoring models, dashboards, and optimization. I enjoy problems with
-            real trade-offs—pricing, growth, operations, and marketplace dynamics—and I like
-            shipping work that stakeholders can use.
+            data pipelines, scoring models, dashboards, and optimization. My deeper research interests are 
+            in assortment optimization, retrieval-augmented generation systems and experimental designs.
+            
           </p>
         </section>
 
